# perspective-world-model-kit

./: .bandit  .dockerignore  .editorconfig  .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .yamllint.yml  ARCHITECTURE.md  AUTONOMOUS_EXECUTION_FINAL_REPORT.md  AUTONOMOUS_IMPLEMENTATION_SUMMARY.md  AUTONOMOUS_SDLC_COMPLETE_SUMMARY.md  AUTONOMOUS_SDLC_EXECUTION_COMPLETE.md  AUTONOMOUS_SDLC_FINAL_REPORT.md  AUTONOMOUS_SDLC_IMPLEMENTATION_SUMMARY.md  BACKLOG.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  Makefile  PRODUCTION_DEPLOYMENT_SUMMARY.md  PROJECT_CHARTER.md  QUICKSTART.md  README.md  REVOLUTIONARY_BREAKTHROUGH_SUMMARY.md  SDLC_CHECKPOINT_SUMMARY.md  SDLC_ENHANCEMENT_SUMMARY.md  SECURITY.md  academic_publication_package.py  advanced_optimization_suite.py  architecture_validation_results.json  comprehensive_quality_gates.py  conftest.py  demo.py  (+70 more)
.devcontainer/: devcontainer.json
.github/: dependabot.yml  project-metrics.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  research_discussion.md
.terragon/: DEPLOYMENT_SUMMARY.md  INTEGRATION.md  README.md  analyzers.py  config.yaml  discover.py  metrics.json  test_discovery.py  value_scoring.py
.terragon/reports/: analysis_results_20250801_121303.json  analysis_results_20250801_121336.json  value_items_20250801_121303.json  value_items_20250801_121336.json
chaos-engineering/: chaos-tests.yml
deployment/: production_deployment.py
docker/: Dockerfile.sentiment
docs/: CI_CD_REQUIREMENTS.md  COMPLIANCE_GOVERNANCE.md  DEPLOYMENT_STRATEGY.md  DEVELOPMENT.md  DEVELOPMENT_OPTIMIZATIONS.md  DISASTER_RECOVERY.md  MONITORING_OBSERVABILITY.md  PERFORMANCE_TESTING.md  QUANTUM_ALGORITHMS.md  QUANTUM_EXAMPLES.md  ROADMAP.md  SETUP_REQUIRED.md
docs/adr/: 0001-adr-template.md
docs/guides/: README.md  installation.md
docs/workflows/: README.md  SETUP_INSTRUCTIONS.md
docs/workflows/examples/: ci.yml  release.yml  security.yml
examples/: consciousness_demo.py
k8s/: sentiment-deployment.yaml
monitoring/: alert_rules.yml  otel-collector.yml  prometheus-prod.yml  prometheus.yml  recording_rules.yml
monitoring/grafana/dashboards/: pwmk-dashboard.json
monitoring/grafana/provisioning/alerting/: contact-points.yml  notification-policies.yml
monitoring/grafana/provisioning/dashboards/: dashboard.yml
monitoring/grafana/provisioning/datasources/: prometheus.yml
pwmk/: __init__.py  cli.py
pwmk/agents/: __init__.py  tom_agent.py
pwmk/autonomous/: __init__.py  self_improving_agent.py  transcendent_agent.py
pwmk/breakthrough/: __init__.py  emergent_intelligence.py  meta_intelligence.py
pwmk/core/: __init__.py  beliefs.py  simple_demo_interface.py  simulator.py  theory_of_mind.py  world_model.py
pwmk/deployment/: __init__.py  global_consciousness_deployment.py  multi_region_deployment.py  production_readiness_checker.py
pwmk/envs/: __init__.py  simple_grid.py
pwmk/examples/: __init__.py  quick_examples.py
pwmk/global/: __init__.py  consciousness_deployment.py
pwmk/global_deployment/: i18n_manager.py  multi_region_orchestrator.py
pwmk/monitoring/: __init__.py  comprehensive_monitoring.py
pwmk/optimization/: __init__.py  adaptive_scaling.py  advanced_optimization.py  auto_scaling.py  auto_scaling_engine.py  batching.py  caching.py  intelligent_caching.py  parallel_processing.py  performance_optimizer.py  quantum_accelerated_inference.py
pwmk/performance/: __init__.py  adaptive_batching.py
pwmk/planning/: __init__.py  epistemic.py
pwmk/quantum/: __init__.py  adaptive_quantum.py  adaptive_quantum_acceleration.py  consciousness_quantum_bridge.py  dashboard.py  integration.py  monitoring.py  performance.py  quantum_annealing.py  quantum_circuits.py  quantum_planner.py
pwmk/reliability/: __init__.py  error_recovery.py  health_monitoring.py  system_resilience.py
pwmk/research/: __init__.py  advanced_framework.py  breakthrough_algorithms.py  publication_generator.py
pwmk/revolution/: __init__.py  consciousness_engine.py  consciousness_evolution.py
pwmk/security/: __init__.py  belief_validator.py  input_sanitizer.py  quantum_security.py  rate_limiter.py  secure_config_manager.py
pwmk/sentiment/: __init__.py  belief_sentiment.py  caching.py  compliance.py  distributed.py  exceptions.py  i18n.py  metrics.py  monitoring.py  optimization.py  perspective_sentiment.py  regional.py  sentiment_analyzer.py  validation.py
pwmk/utils/: __init__.py  advanced_monitoring.py  circuit_breaker.py  fallback_manager.py  health_check.py  health_monitor.py  logging.py  monitoring.py  resilience.py  validation.py
pwmk/validation/: __init__.py  comprehensive_system_test.py  comprehensive_validation.py
pwmk_env/: pyvenv.cfg
requirements/: dev.in  docs.in  test.in
scripts/: build.sh  collect_metrics.py  deploy.sh  dev_server.py  docker-health-check.sh  generate_sbom.py  init-prod-db.sql  performance_benchmark.py  setup_dev_env.sh  validate_configs.py
security/: falco-custom-rules.yaml  runtime-monitoring.yml
terraform/: sentiment-aws.tf
tests/: __init__.py  conftest.py  test_basic_functionality.py  test_generation_all.py  test_world_model.py
tests/benchmarks/: test_performance.py
tests/fixtures/: beliefs.py  environments.py  models.py
tests/integration/: test_end_to_end.py  test_sentiment_integration.py
tests/performance/: test_benchmarks.py  test_sentiment_benchmarks.py
tests/quantum/: __init__.py  test_performance_optimization.py  test_quantum_benchmarks.py  test_quantum_integration.py  test_quantum_planner.py
tests/security/: test_sentiment_security.py
tests/unit/: test_belief_store.py  test_sentiment_analyzer.py  test_sentiment_metrics.py  test_world_model.py
tests/utils/: test_helpers.py
