[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "perspective-world-model-kit"
version = "0.2.0"
description = "Neuro-symbolic world models with Theory of Mind for multi-agent AI systems"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    {name = "Daniel Schmidt"},
]
keywords = [
    "artificial-intelligence",
    "machine-learning",
    "theory-of-mind",
    "multi-agent",
    "reinforcement-learning",
    "symbolic-reasoning",
    "world-models",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/danieleschmidt/perspective-world-model-kit"
Repository = "https://github.com/danieleschmidt/perspective-world-model-kit"

[tool.hatch.build.targets.wheel]
packages = ["pwmk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v"]
